--- a/src/modules/app/modules/navigation/navigation.component.html
+++ b/src/modules/app/modules/navigation/navigation.component.html
@@ -1,8 +1,20 @@
 <header tuiNavigationHeader>
     RinHack Email Analyzer
     <hr />
-    <button appearance="secondary" iconLeft="tuiIconPlus" tuiButton (click)="goToUpload()">
+    <button
+        appearance="secondary"
+        iconLeft="tuiIconPlus"
+        tuiButton
+        (click)="goToUpload()"
+    >
         Upload
     </button>
-    <button appearance="primary" iconLeft="tuiIconSearch" tuiButton (click)="goToScan()">Scan</button>
+    <button
+        appearance="primary"
+        iconLeft="tuiIconSearch"
+        tuiButton
+        (click)="goToScan()"
+    >
+        Scan
+    </button>
 </header>
